<resources>
    <string name="app_name">UltimoAplicativoDoMundo</string>
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="action_settings">Settings</string>
    <string name="ultimo_aplicativo_do_mundo">Ultimo Aplicativo do Mundo</string>
    <string name="daniel_furlan">Daniel Furlan</string>
    <string name="vice_consul_de_honduras">Vice Consul de Honduras</string>
    <string name="boquetitos">Boquetitos</string>
    <string name="sounds">Sounds</string>
    <string name="gifs">Gifs</string>
    <string name="rogerinho_do_ing">Rogerinho do Ingá</string>
    <string name="outros">Outros</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
